# coact

./: .buildinfo  CHANGELOG.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  table_of_contents.html
.claude/: README.md
.claude/agents/: coact-docs-checker.md  coact-reviewer.md
.claude/skills/: AI_ASSISTANT_SKILLS_README.md  ai-assistant-agent-runtime  ai-assistant-architect  ai-assistant-chat-ui  ai-assistant-command-mcp  ai-assistant-prompts-skills  coact  coact-analyze  coact-complete  coact-dev  coact-publish  coact-realize
.claude/skills/ai-assistant-agent-runtime/: SKILL.md
.claude/skills/ai-assistant-chat-ui/: SKILL.md
.claude/skills/ai-assistant-command-mcp/: SKILL.md
.claude/skills/coact/: SKILL.md
.claude/skills/coact-analyze/: SKILL.md
.claude/skills/coact-complete/: SKILL.md
.claude/skills/coact-dev/: SKILL.md
.claude/skills/coact-publish/: SKILL.md
.claude/skills/coact-realize/: SKILL.md
_modules/: index.html
_modules/coact/: __main__.html  _pydantic_schema.html  analysis.html  base.html  complete.html  emit.html  frontmatter.html  integration.html  llm.html  nl_ingress.html  policy.html  publish.html  publish_mcpb.html  publish_remote.html  realize.html  realize_crewai.html  realize_langgraph.html  realize_litellm.html  return_contract.html  scaffold.html  schema.html  stores.html  synthesis.html  util.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: coact.rst.txt
_sources/module_docs/coact/: __main__.rst.txt  _pydantic_schema.rst.txt  analysis.rst.txt  base.rst.txt  complete.rst.txt  emit.rst.txt  frontmatter.rst.txt  integration.rst.txt  llm.rst.txt  nl_ingress.rst.txt  policy.rst.txt  publish.rst.txt  publish_mcpb.rst.txt  publish_remote.rst.txt  realize.rst.txt  realize_crewai.rst.txt  realize_langgraph.rst.txt  realize_litellm.rst.txt  return_contract.rst.txt  scaffold.rst.txt  schema.rst.txt  stores.rst.txt  synthesis.rst.txt  util.rst.txt
coact/: __init__.py  __main__.py  _pydantic_schema.py  analysis.py  base.py  complete.py  emit.py  frontmatter.py  integration.py  llm.py  nl_ingress.py  policy.py  publish.py  publish_mcpb.py  publish_remote.py  realize.py  realize_crewai.py  realize_langgraph.py  realize_litellm.py  return_contract.py  scaffold.py  schema.py  stores.py  synthesis.py  util.py
examples/: README.md  walkthrough.py
examples/skills/ux-analyst/: SKILL.md
misc/docs/: CHATBOT_INTEGRATION_LANDSCAPE.md  COACT_SPEC.md  DECISIONS.md  REUSE.md  The agent-definition interop landscape — what a skill→agent→runtime toolkit must target in 2026.md
module_docs/: coact.html
module_docs/coact/: __main__.html  _pydantic_schema.html  analysis.html  base.html  complete.html  emit.html  frontmatter.html  integration.html  llm.html  nl_ingress.html  policy.html  publish.html  publish_mcpb.html  publish_remote.html  realize.html  realize_crewai.html  realize_langgraph.html  realize_litellm.html  return_contract.html  scaffold.html  schema.html  stores.html  synthesis.html  util.html
skills/ai-assistant-architect/: SKILL.md
skills/ai-assistant-prompts-skills/: SKILL.md
tests/: conftest.py  test_analysis_cli.py  test_cli.py  test_complete.py  test_examples.py  test_foundation.py  test_frontmatter.py  test_live_realize.py  test_llm.py  test_nl_ingress.py  test_policy.py  test_publish.py  test_publish_remote.py  test_realize.py  test_realize_crewai.py  test_realize_langgraph.py  test_realize_litellm.py  test_return_contract.py  test_review_fixes.py  test_scaffold.py  test_schema_depth.py  test_stores.py  test_synthesis_mcp.py  test_util.py
