[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "coact"
version = "0.0.4"
description = "Reuse your AI stuff across the agent stack: COMPLETE skills into agent definitions and REALIZE them into running agents (glue over skill, aw, py2mcp)."
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = [
    { name = "Thor Whalen" },
]
dependencies = [
    "skill",
    "argh",
]

[project.license]
text = "mit"

[project.urls]
Homepage = "https://github.com/thorwhalen/coact"
Repository = "https://github.com/thorwhalen/coact"
Documentation = "https://thorwhalen.github.io/coact"

[project.scripts]
coact = "coact.__main__:main"

[project.entry-points."skill.validators"]
coact_frontmatter = "coact.frontmatter:_coact_validator"

[project.optional-dependencies]
sdk = [
    "claude-agent-sdk",
    "aw",
]
mcp = [
    "py2mcp",
    "fastmcp",
]
# The `claude-local-mcpb` publish target builds bundles with the stdlib alone;
# py2mcp + fastmcp are needed in the Python that RUNS the installed .mcpb (and
# locally to introspect tool docstrings), so they ship as this extra.
mcpb = [
    "py2mcp",
    "fastmcp",
]
litellm = [
    "litellm>=1.0",
]
langgraph = [
    "langchain>=1.0",
    "langgraph>=1.0",
    # The chosen provider's integration is also needed on the real path; the default
    # model is openai-prefixed, so langchain-openai ships here. An `anthropic:` model
    # additionally needs `langchain-anthropic` (install it alongside).
    "langchain-openai>=1.0",
]
crewai = [
    # crewai requires Python >=3.10,<3.14; tool helpers live in `crewai[tools]`.
    "crewai>=1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = [
    "D100",
]
ignore = [
    "D203",
    "E501",
    "B905",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "D",
]
"**/examples/*" = [
    "D",
]
"**/scrap/*" = [
    "D",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
]
markers = [
    "real_llm: live test that calls a real LLM / agent backend (opt-in; set COACT_RUN_REAL_LLM=1 to run, else skipped)",
]

[tool.wads.ci]
project_name = ""

[tool.wads.ci.commands]
pre_test = []
test = []
post_test = []
lint = []
format = []

[tool.wads.ci.env]
required_envvars = []
test_envvars = []
extra_envvars = []

[tool.wads.ci.env.defaults]

[tool.wads.ci.quality.ruff]
enabled = true

[tool.wads.ci.quality.black]
enabled = false

[tool.wads.ci.quality.mypy]
enabled = false

[tool.wads.ci.testing]
enabled = true
python_versions = [
    "3.10",
    "3.12",
]
pytest_args = [
    "-v",
    "--tb=short",
]
coverage_enabled = true
coverage_threshold = 0
coverage_report_format = [
    "term",
    "xml",
]
exclude_paths = [
    "examples",
    "scrap",
]
test_on_windows = true

[tool.wads.ci.metrics]
enabled = true
config_path = ".github/umpyre-config.yml"
storage_branch = "code-metrics"
python_version = "3.10"
force_run = false

[tool.wads.ci.build]
sdist = true
wheel = true

# Publishing is marker-gated: enabled=false means the publish job is SKIPPED on
# routine pushes (keeping main green) and runs ONLY when a commit message
# contains publish_marker ("[publish]"). Releasing coact to PyPI is a deliberate,
# owner-initiated act — flip the marker into a commit (and ensure PYPI_PASSWORD
# is set on the repo) when you mean to ship. See DECISIONS.md D11.
[tool.wads.ci.publish]
enabled = false
skip_ci_marker = "[skip ci]"
publish_marker = "[publish]"

[tool.wads.ci.docs]
enabled = true
builder = "epythet"
ignore_paths = [
    "tests/",
    "scrap/",
    "examples/",
]
